# noiz

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTORS.rst  Dockerfile  LICENSE.rst  README.md  README.rst  autoapp.py  conftest.py  doc8.ini  docker-compose-xps13.yml  docker-compose.yml  justfile  mypy.ini  package-list.txt  pyproject.toml  pytest.ini  requirements-basic.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  ruff.toml  setup.cfg  setup.py
.gitlab/templates/: documentation.yml  linting.yml
config_examples/: QCOneConfig.toml  QCOneConfig_without_rejected_times.toml  QCTwoConfig.toml  beamforming_params.toml  crosscorrelation_cylindrical_param.toml  crosscorrelation_params.toml  datachunk_params.toml  ppsd_params.toml  ppsd_params_resampled.toml  processed_datachunk_params.toml  stacking_schema.toml
config_examples/s_bounds_deconv/: s_band_1.csv  s_band_2.csv
db-init-scripts/: init.sql
docker/noiz-image/: Dockerfile
docker/postgres-image/: Dockerfile
docker/unittest-image/: Dockerfile
docs/: Makefile  conf.py  index.rst  modules.rst  noiz.api.rst  noiz.models.rst  noiz.processing.rst  noiz.processing.soh.rst  noiz.rst
docs/content/: cli.rst  datachunk.rst  docker.rst  miscellaneous.rst  profiling.rst  usage.rst
docs/content/cli/: index.rst  plotting.rst
docs/content/development/: coding_standards.rst  deprecations.rst  environment_setup.rst  index.rst  pre_commit_hooks.rst  type_checking.rst
docs/content/development/design_decisions/: architecture.rst  index.rst  plugin_architecture.rst
docs/content/development/design_documents/: config_system.rst  index.rst  refactoring_roadmap.rst  s3_storage.rst  semantic_versioning.rst
docs/content/guides/: index.rst  profiling.rst  running_system_tests_locally.rst
docs/content/miscellaneous/: docker.rst  ignore_revs_file.rst  index.rst
docs/content/tutorials/: basic_data_concepts.rst  create_noiz_project.rst  index.rst  notebook_tutorial.rst  step_by_step.rst  test_dataset.rst  tutorial.rst
docs/content/tutorials/toml_files/: datachunk_params.toml
mehdocker/base/: Dockerfile
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 25b25bb2f017_.py  2e84b6425aed_.py  5eef4000f000_.py  5f37717a6e0e_.py  8c9b2ea10904_initial_migration_baseline_schema_with_.py  d705d31bf616_.py
noiz/: __init__.py  app.py  cli.py  database.py  exceptions.py  globals.py  logg.py  logging.py  models.py  routes.py  settings.py
noiz/api/: __init__.py  component.py  component_pair.py  component_pairs.py  crosscorrelations.py  datachunk.py  datachunk_plotting.py  helpers.py  inventory.py  processing_config.py  soh.py  stacking.py  timespan.py
noiz/api/datachunk/: __init__.py  plotting.py
noiz/dashapp/: callbacks.py  layout.py
noiz/models/: __init__.py  component.py  component_pair.py  crosscorrelation.py  datachunk.py  processing_config.py  processing_params.py  processingconfig.py  soh.py  stacking.py  stacking_schema.py  time_series_index.py  timespan.py
noiz/processing/: component_pair.py  crosscorrelations.py  datachunk_preparation.py  datachunk_processing.py  file.py  inventory.py  processing_config.py  stacking.py  time_utils.py  timespan.py  trace.py
noiz/processing/soh/: parsing.py  plotting.py  soh.py  soh_column_names.py
noiz/routes/: baseroute.py
src/noiz/: __init__.py  __main__.py  app.py  cli.py  database.py  exceptions.py  globals.py  logg.py  routes.py  settings.py  validation_helpers.py
src/noiz/api/: __init__.py  beamforming.py  beamforming_plotting.py  component.py  component_pair.py  crosscorrelations.py  database_helpers.py  datachunk.py  datachunk_plotting.py  event_detection.py  helpers.py  inventory.py  ppsd.py  processing_config.py  psd_plotting.py  qc.py  soh.py  soh_plotting.py  stacking.py  timeseries.py  timespan.py  tsindex.py  type_aliases.py
src/noiz/dashapp/: callbacks.py
src/noiz/models/: __init__.py  beamforming.py  component.py  component_pair.py  crosscorrelation.py  custom_db_types.py  datachunk.py  event_detection.py  mixins.py  ppsd.py  processing_params.py  qc.py  soh.py  stacking.py  timeseries.py  timespan.py  type_aliases.py
src/noiz/processing/: beamforming.py  component.py  component_pair.py  configs.py  crosscorrelations.py  datachunk.py  datachunk_preparation.py  datachunk_processing.py  event_detection.py  inventory.py  io.py  miniseed_helpers.py  path_helpers.py  ppsd.py  qc.py  signal_helpers.py  signal_utils.py  stacking.py  time_utils.py  timeseries.py  timespan.py  trace.py  tsindex.py  validation_helpers.py  warning_handling.py
src/noiz/processing/obspy_derived/: __init__.py  array_analysis.py
src/noiz/processing/soh/: __init__.py  exceptions.py  parsing.py  parsing_params.py  plotting.py  soh_column_names.py  transformation.py
tests/api/: test_helpers.py
tests/models/: __init__.py  test_component.py  test_component_pair.py  test_timespan.py  timespan.py
tests/processing/: file.py  test_beamforming.py  test_component.py  test_component_pair.py  test_configs.py  test_datachunk_preparation.py  test_inventory.py  test_path_helpers.py  test_qc.py  test_signal_helpers.py  test_time_utils.py  test_timespan.py  test_validation_helpers.py  warning_handling.py
tests/processing/data/: inventory.xml  inventory_SI.SI09.Z.xml
tests/processing/soh/: test_parsing.py  test_parsing_params.py  test_transformation.py
tests/processing/soh/data/: TD.TD09.D0.SOH_centaur-3_1492_20180616_040000.miniseed  XX.S0001.D0.SOH_centaur-3_1479_20171125_100000.miniseed
tests/system_tests/: create_new_db.py  docker-compose.yml
tests/system_tests/api/: data_ingestion.py  test_data_ingestion.py
tests/system_tests/cli/: data_ingestion.py  test_data_ingestion.py
