# SPDX-License-Identifier: CECILL-B
# Copyright © 2015-2019 EOST UNISTRA, Storengy SAS, Damian Kula
# Copyright © 2019-2023 Contributors to the Noiz project.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noiz"
dynamic = ["version"]
readme = "README.rst"
license = {text = "CECILL-B"}
authors = [
#    List ordered by time of joining the project
    { name = "Damian Kula", email = "heavelock@gmail.com" },
    { name = "Alexandre Kazantsev", email = "alexandre.kazantsev@storengy.com" },
    { name = "Arthur Dartois", email = "arthur.dartois@storengy.com" },
    { name = "Laure Duboeuf", email = "laure.duboeuf@external.storengy.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "sqlalchemy ==2.0.23",
    "flask ==2.2.5",
    "flask-sqlalchemy ==3.1.1",
    "flask-migrate ==4.0.5",
    "werkzeug ==2.3.3", # flask doesn't pin properly this dependency
    "psycopg2-binary ==2.9.2",
    "click >=8.0.3",
    "more-itertools >=8.11",
    "loguru >=0.5.3",
    "matplotlib ==3.5.0",
    "numpy ~=1.26.1",
    "obspy ~=1.4.0",
    "pandas ~=2.1.2",
    "pydantic ~=2.4",
    "pydantic-settings ~=2.0.3",
    "scipy ~=1.11.3",
    "tqdm >=4.62.3",
    "toml>=0.10.2",
    "utm >=0.7.0",
    "dask[complete] ==2021.11.2",
    "pendulum ~=2.1",
]
[project.optional-dependencies]
test = [
    "pytest ==6.2.5",
    "pytest-check ==1.0.4",
    "pytest-cov ==3.0.0",
    "pytest-dependency ==0.5.1",
    "pytest-mock ==3.6.1",
    "mock==4.0.3",
    "mypy ==1.7.0",
    "flake8 ==4.0.1",
    "types-python-dateutil ==2.8.2",
    "types-toml ==0.10.1",
]
docs = [
    "sphinx ~=7.0.0",
    "sphinx-autoapi ~=3.0.0",
    "sphinx-paramlinks ~=0.6.0",
    "sphinx-autodoc-typehints ~=1.24.0",
    "furo ~=2023.9.10",
]

[project.scripts]
noiz = "noiz.cli:cli"

[project.urls]
Homepage = "https://noiz-group.gitlab.io/"
Documentation = "https://noiz-group.gitlab.io/noiz/"
Repository = "https://gitlab.com/noiz-group/noiz.git"
Changelog = "https://gitlab.com/noiz-group/noiz/-/blob/master/CHANGELOG.rst"

[tool.hatch.envs.test]
features = [
    "test",
]

[[tool.hatch.envs.test.matrix]]
python = [
    "3.9",
    "3.10",
#    "3.11", pinned numpy 1.21.4 is incompatible
#    "3.12", pinned numpy 1.21.4 is incompatible
]

[tool.hatch.envs.test.scripts]
cov = 'SQLALCHEMY_WARN_20=1 pytest --cov=noiz'
#system_tests = 'SQLALCHEMY_WARN_20=1 pytest --cov=noiz --runcli'

[tool.hatch.envs.docs]
features = [
    "docs",
]

[tool.hatch.envs.docs.scripts]
build_html = [
    "sphinx-build -M html docs/ docs/_build ",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "flake8 ==4.0.1",
    "mypy ==1.7.0",
    "types-python-dateutil ==2.8.2",
    "types-toml ==0.10.1",
    "pydantic ~=2.4",
    "doc8 ==0.10.1",
    "sqlalchemy ==2.0.23",
]

[tool.hatch.envs.lint.scripts]
run_flake8 = [
    "flake8 .",
]
run_mypy = [
    "mypy --install-types --non-interactive src/noiz",
]
run_doc8 = [
    "doc8 docs/content"
]

[tool.hatch.version]
path = "src/noiz/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.doc8]
max_line_length = 120
